Amended .gitignore file in order to drop a datafile.

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ horse-or-human.zip
 validation-horse-or-human.zip
 cats_and_dogs_filtered.zip
 kagglecatsanddogs_5340.zip
+training_cleaned.csv
 /tmp/
