Amended .gitignore file, added files solving encoding problems in the database, and a partial solution to the assignment.

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ horse-or-human.zip
 validation-horse-or-human.zip
 cats_and_dogs_filtered.zip
 kagglecatsanddogs_5340.zip
+training.csv
 training_cleaned.csv
 /tmp/
